# dick-helper

./: .gitignore  README.md  pyproject.toml
src/: history.py  home.py  main.py  settings.py  utils.py
